--- a/utils/plasma-sb-utils/package.json
+++ b/utils/plasma-sb-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-sb-utils",
-  "version": "0.208.0",
+  "version": "0.209.0-dev.0",
   "description": "Code shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.208.0",
+    "@salutejs/plasma-core": "1.209.0-dev.0",
     "param-case": "^3.0.4"
   },
   "peerDependencies": {
