--- a/website/sdds-scan-docs/package.json
+++ b/website/sdds-scan-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-scan-docs",
-  "version": "0.15.0",
+  "version": "0.16.0-dev.0",
   "description": "SDDS-SCAN documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.507.0",
-    "@salutejs/plasma-icons": "1.225.0",
+    "@salutejs/plasma-docs-ui": "0.508.0-dev.0",
+    "@salutejs/plasma-icons": "1.226.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-scan": "0.324.0",
-    "@salutejs/sdds-themes": "0.47.0",
+    "@salutejs/sdds-scan": "0.325.0-dev.0",
+    "@salutejs/sdds-themes": "0.48.0-dev.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
