--- a/.github/workflows/cypress-common.yml
+++ b/.github/workflows/cypress-common.yml
@@ -44,6 +44,21 @@ jobs:
           else
             echo "SCOPE={core,new-hope,typo,icons,cy-utils}" >> $GITHUB_ENV
           fi
+      
+      - name: Install dependencies for check-test-files-exist
+        if: ${{ inputs.components }}
+        run: |
+            cd .github/actions/check-test-files-exist
+            npm ci
+
+      - name: Check test files exist
+        if: ${{ inputs.components }}
+        id: check-test-files-exist
+        uses: ./.github/actions/check-test-files-exist
+        with:
+          prefix: ${{ inputs.prefix }}
+          scope: ${{ inputs.scope }}
+          components: ${{ inputs.components }}
 
       - name: Install React 17
         if:  ${{ inputs.with-react-17 }}
@@ -51,6 +66,7 @@ jobs:
           npm i --no-progress react@17 react-dom@17 @types/react@17.0.40 @types/react-dom@17 --prefix="./packages/${{ inputs.prefix }}-${{ inputs.scope }}"
 
       - name: Lerna bootstrap
+        if: ${{ (inputs.components == '' || steps.check-test-files-exist.outputs.tests-exist == 'true') }}
         uses: nick-fields/retry@v3
         with:
           timeout_minutes: 45
@@ -66,12 +82,14 @@ jobs:
       - name: Run Cypress CT for Plasma ${{ inputs.scope }}
         if: ${{ success() }}
         run: |
-          if [ -n "${{ inputs.components }}" ]; then
+          if [ -n "${{ inputs.components }}" ] && [ "${{ steps.check-test-files-exist.outputs.tests-exist }}" = "true" ]; then
             echo "Running Cypress for specific components: ${{ inputs.components }}"
             npm run cy:${{ inputs.scope }}:run-ct --components="${{ inputs.components }}"
-          else
+          elif [ -z "${{ inputs.components }}" ]; then
             echo "Running Cypress for all components"
             npm run cy:${{ inputs.scope }}:run-ct
+          else
+              echo "Skipping Cypress: No test files found for specified components"
           fi
 
       - name: Reorganize diff artifacts
