--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-new-hope",
-  "version": "0.343.0",
+  "version": "0.344.0-dev.0",
   "description": "Salute Design System blueprint",
   "exports": {
     ".": {
@@ -92,8 +92,8 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
-    "@salutejs/plasma-cy-utils": "0.141.0",
-    "@salutejs/plasma-sb-utils": "0.211.0",
+    "@salutejs/plasma-cy-utils": "0.142.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.212.0-dev.0",
     "@salutejs/plasma-themes": "0.38.0",
     "@types/lodash": "^4.14.191",
     "@types/lodash.chunk": "4.2.9",
@@ -122,7 +122,7 @@
     "@linaria/react": "5.0.3",
     "@popperjs/core": "2.11.8",
     "@salutejs/input-core": "2.1.2",
-    "@salutejs/plasma-core": "1.211.0",
+    "@salutejs/plasma-core": "1.212.0-dev.0",
     "@salutejs/react-maskinput": "3.3.2",
     "@tanstack/react-table": "8.21.2",
     "@tanstack/react-virtual": "3.13.2",
