--- a/packages/sdds-bizcom/package.json
+++ b/packages/sdds-bizcom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-bizcom",
-  "version": "0.331.0",
+  "version": "0.332.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS BIZCOM web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -9,7 +9,7 @@
       "require": "./dist/css/cjs/index.js",
       "types": "./types/index.d.ts"
     },
-    "./styled-components" : {
+    "./styled-components": {
       "import": "./dist/styled-components/es/index.js",
       "require": "./dist/styled-components/cjs/index.js",
       "types": "./types/index.d.ts"
@@ -32,8 +32,8 @@
     "directory": "packages/sdds-bizcom"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.343.0",
-    "@salutejs/sdds-themes": "0.50.0"
+    "@salutejs/plasma-new-hope": "0.344.0-dev.0",
+    "@salutejs/sdds-themes": "0.51.0-dev.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -57,10 +57,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.211.0",
-    "@salutejs/plasma-cy-utils": "0.141.0",
+    "@salutejs/plasma-core": "1.212.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.142.0-dev.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-sb-utils": "0.211.0",
+    "@salutejs/plasma-sb-utils": "0.212.0-dev.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
