--- a/packages/sdds-netology/package.json
+++ b/packages/sdds-netology/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@salutejs/sdds-netology",
-  "version": "0.330.0",
+  "version": "0.331.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS NETOLOGY web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
-    "." : {
+    ".": {
       "import": "./dist/css/es/index.js",
       "require": "./dist/css/cjs/index.js",
       "types": "./types/index.d.ts"
     },
-    "./styled-components" : {
+    "./styled-components": {
       "import": "./dist/styled-components/es/index.js",
       "require": "./dist/styled-components/cjs/index.js",
       "types": "./types/index.d.ts"
@@ -32,7 +32,7 @@
     "directory": "packages/sdds-netology"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.343.0",
+    "@salutejs/plasma-new-hope": "0.344.0-dev.0",
     "@salutejs/plasma-themes": "0.38.0"
   },
   "peerDependencies": {
@@ -57,10 +57,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.211.0",
-    "@salutejs/plasma-cy-utils": "0.141.0",
+    "@salutejs/plasma-core": "1.212.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.142.0-dev.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-sb-utils": "0.211.0",
+    "@salutejs/plasma-sb-utils": "0.212.0-dev.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
