--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "3.0.0",
     "eslint-plugin-storybook": "10.1.0",
+    "expect-type": "1.3.0",
     "fast-glob": "3.2.12",
     "file-loader": "6.2.0",
     "fs-extra": "10.0.0",
@@ -179,6 +180,7 @@
     "typescript": "5.6.3",
     "url-loader": "4.1.1",
     "vite": "5.4.21",
+    "vitest": "4.0.16",
     "webpack": "5.76.0",
     "webpack-dev-server": "3.11.2"
   },
