--- a/website/sdds-finai-docs/package.json
+++ b/website/sdds-finai-docs/package.json
@@ -23,7 +23,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "lint": "../../node_modules/.bin/eslint ./src --ext .ts,.tsx --quiet"
+    "lint": "../../node_modules/.bin/eslint ./src --ext .ts,.tsx --quiet",
+    "generate-index": "node ./scripts/generateIndex.mjs"
   },
   "dependencies": {
     "@docusaurus/core": "3.6.1",
