--- a/packages/sdds-insol/package.json
+++ b/packages/sdds-insol/package.json
@@ -32,8 +32,8 @@
     "directory": "packages/sdds-insol"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.351.2-next-insol.0",
-    "@salutejs/sdds-themes": "0.55.1-next-insol.0"
+    "@salutejs/plasma-new-hope": "0.352.0",
+    "@salutejs/sdds-themes": "0.56.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -58,10 +58,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.216.1-next-insol.0",
-    "@salutejs/plasma-cy-utils": "0.146.1-next-insol.0",
+    "@salutejs/plasma-core": "1.217.0",
+    "@salutejs/plasma-cy-utils": "0.147.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-sb-utils": "0.216.2-next-insol.0",
+    "@salutejs/plasma-sb-utils": "0.217.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
